--- a/dia-14/index.html
+++ b/dia-14/index.html
@@ -3,15 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.google.com/css2?family=Fira+Code:wght@500&display=swap"
+    />
     <link rel="stylesheet" href="style.css" />
-    <title>Dia 9: Pêndulo</title>
+    <title>Dia 14: Animated text background</title>
   </head>
   <body>
-    <div class="pendulo">
-      <span></span>
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
+    <span>FUNDO TECH QUE ACHEI NO GOOGLE</span>
   </body>
 </html>
