--- a/dia-16/index.html
+++ b/dia-16/index.html
@@ -3,16 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Righteous&display=swap"
-    />
     <link rel="stylesheet" href="style.css" />
     <title>Dia 16: Efeito</title>
   </head>
   <body>
     <div>
-      <img src="./icon.png" alt="" />
+      <img src="https://raw.githubusercontent.com/levi-pires/30diasDeCSS/master/dia-16/icon.png" alt="" />
       <strong>READY?</strong>
     </div>
   </body>
